# movie-review-system

./: .gitignore  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/movie_review_system/: Cargo.toml
anchor/programs/movie_review_system/src/: errors.rs  handlers.rs  lib.rs  state.rs
anchor/src/: index.ts  movie-exports.ts
custom-token/: create-mint.js  create-pda.js  mint-tokens.js  package-lock.json  package.json  transfer_authority.js
src/app/: layout.tsx
src/app/api/movies/submit-review/: route.tsx
src/app/movies/create/: page.tsx
src/components/: app-header.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/movie-review-system/: edit-review-form-ui.tsx  movie-data-access.tsx  movie-form-ui.tsx  movie-list-ui.tsx  review-form-ui.tsx  rewards-modal.tsx
types/: movie_review_system.ts
